apps-kustomization/carts/overlays/vpc-lattice/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: carts
  namespace: carts
  annotations:
    networking.amazonaws.com/vpc-lattice-service: "true"
