apps-kustomization/carts/overlays/vpc-lattice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carts
  namespace: carts
  annotations:
    networking.amazonaws.com/vpc-lattice-service: "true"
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app.kubernetes.io/name: carts
