apps-kustomization/carts/overlays/vpc-lattice/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: carts-gateway
  namespace: carts
spec:
  gatewayClassName: amazon-vpc-lattice  # Change this to use the accepted GatewayClass
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
