apps-kustomization/carts/overlays/vpc-lattice/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: carts
  namespace: carts
spec:
  hostnames:
  - carts.myorg.com
  parentRefs:
  - kind: Gateway
    name: lattice-gateway
    namespace: lattice-gateway
    sectionName: http-listener
  rules:
  - backendRefs:
    - name: carts
      kind: Service
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
